--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ import '../styles/pages/index.css';
         <div class="hero-content">
             <h1>T.S.K.V. Spartacus</h1>
             <h2>The Largest Student Strength Sports Association in the Benelux</h2>
-            <p>Since 2012, we’ve brought together students of every fitness level and goals. Join us for expert-led seminars, hands-on training clinics, fitness, competitive powerlifting/weightlifting, and lively social events. International students? You’re welcome all event are in English!</p>
+            <p>Since 2012, we’ve brought together students of every fitness level and goals. Join us for expert-led seminars, hands-on training clinics, fitness, competitive powerlifting/weightlifting, and lively social events. International students? You’re welcome as all events are in English!</p>
             <div class="hero-buttons">
                 <a href="become-a-member.html" class="btn">Become a Member</a>
                 <a href="about.html" class="btn btn-secondary">Learn More</a>
