--- a/src/components/DiscountPartners.astro
+++ b/src/components/DiscountPartners.astro
@@ -57,12 +57,11 @@
         </div>
     </div>
     
-    <!-- O'Cafe NEW! -->
+    <!-- O'Cafe -->
     <div class="discount-card featured-discount">
-        <div class="discount-ribbon">NEW!</div>
         <div class="discount-header">
             <div class="discount-logo-container">
-                <img src="/images/logos/ocafe-logo.png" alt="O'Cafe Logo" class="discount-logo">
+                <img src="/images/logos/ocafe-logo.svg" alt="O'Cafe Logo" class="discount-logo">
             </div>
             <div class="discount-badge">10% OFF</div>
         </div>
@@ -78,25 +77,36 @@
             </ul>
             
             <div class="discount-button-container">
-                <a href="https://www.facebook.com/OCafeTilburg/" target="_blank" class="btn btn-secondary discount-btn">
-                    <i class="fab fa-facebook-f"></i> FOLLOW ON FACEBOOK
+                <a href="https://www.olympiasportsbar.nl/" target="_blank" class="btn btn-secondary discount-btn">
+                    <i class="fas fa-external-link-alt"></i> VISIT WEBSITE
                 </a>
-            </div>
         </div>
     </div>
     
-    <!-- Placeholder for future discounts -->
-    <div class="discount-card discount-placeholder">
-        <div class="discount-placeholder-icon">
-            <i class="fas fa-plus-circle"></i>
+    <!-- Sport Center Entry -->
+        <div class="discount-item">
+            <div class="discount-logo-container">
+                <img src="/images/logos/Tilburg-University-logo.png" alt="Tilburg University Logo" class="discount-logo">
+            </div>
+          <div class="discount-header">
+            <h3>Sport Center/Tilburg University</h3>
+            <span class="discount-tag">Fitness</span>
+          </div>
+            <a href="https://www.tilburguniversity.edu/nl/campus/sports-center" class="discount-link" target="_blank">Visit website</a>
+          </div>
         </div>
-        <h3 class="discount-placeholder-title">MORE PARTNERS COMING SOON</h3>
-        <p class="discount-placeholder-text">We're constantly expanding our network of partners to bring more exclusive discounts to our members.</p>
-        <p class="discount-placeholder-text">Have a suggestion for a potential partner? Let us know!</p>
-        <div class="discount-button-container">
-            <a href="/contact" class="btn btn-secondary discount-btn">
-                <i class="fas fa-envelope"></i> SUGGEST A PARTNER
-            </a>
+
+        <!-- FOSST Entry -->
+        <div class="discount-item">
+            <div class="discount-logo-container">
+                <img src="/images/logos/fosst-logo.png" alt="FOSST Logo" class="discount-logo">
+            </div>
+          <div class="discount-header">
+            <h3>FOSST</h3>
+            <span class="discount-tag">Technology</span>
+          </div>
+          
+            <a href="https://fosst.nl" class="discount-link" target="_blank">Visit website</a>
+          </div>
         </div>
-    </div>
 </div>
