--- a/src/components/DiscountPartners.astro
+++ b/src/components/DiscountPartners.astro
@@ -80,33 +80,38 @@
                 <a href="https://www.olympiasportsbar.nl/" target="_blank" class="btn btn-secondary discount-btn">
                     <i class="fas fa-external-link-alt"></i> VISIT WEBSITE
                 </a>
+            </div>
         </div>
     </div>
     
     <!-- Sport Center Entry -->
-        <div class="discount-item">
+    <div class="discount-card">
+        <div class="discount-header">
             <div class="discount-logo-container">
                 <img src="/images/logos/Tilburg-University-logo.png" alt="Tilburg University Logo" class="discount-logo">
             </div>
-          <div class="discount-header">
-            <h3>Sport Center/Tilburg University</h3>
-            <span class="discount-tag">Fitness</span>
-          </div>
-            <a href="https://www.tilburguniversity.edu/nl/campus/sports-center" class="discount-link" target="_blank">Visit website</a>
-          </div>
         </div>
+        <div class="discount-body">
+            <div class="discount-button-container">
+                <a href="https://www.tilburguniversity.edu/nl/campus/sports-center" class="btn btn-secondary discount-btn" target="_blank">
+                    <i class="fas fa-external-link-alt"></i> VISIT WEBSITE
+                </a>
+            </div>
+        </div>
+    </div>
 
-        <!-- FOSST Entry -->
-        <div class="discount-item">
+    <!-- FOSST Entry -->
+    <div class="discount-card">
+        <div class="discount-header">
             <div class="discount-logo-container">
                 <img src="/images/logos/fosst-logo.png" alt="FOSST Logo" class="discount-logo">
-            </div>
-          <div class="discount-header">
-            <h3>FOSST</h3>
-            <span class="discount-tag">Technology</span>
-          </div>
-          
-            <a href="https://fosst.nl" class="discount-link" target="_blank">Visit website</a>
-          </div>
         </div>
+        <div class="discount-body">        
+            <div class="discount-button-container">
+                <a href="https://fosst.nl" class="btn btn-secondary discount-btn" target="_blank">
+                    <i class="fas fa-external-link-alt"></i> VISIT WEBSITE
+                </a>
+            </div>
+        </div>
+    </div>
 </div>
