--- a/src/components/DiscountPartners.astro
+++ b/src/components/DiscountPartners.astro
@@ -92,6 +92,8 @@
             </div>
         </div>
         <div class="discount-body">
+            <h3 class="discount-title">SPORT CENTER</h3>
+
             <div class="discount-button-container">
                 <a href="https://www.tilburguniversity.edu/nl/campus/sports-center" class="btn btn-secondary discount-btn" target="_blank">
                     <i class="fas fa-external-link-alt"></i> VISIT WEBSITE
@@ -103,6 +105,7 @@
     <!-- FOSST Entry -->
     <div class="discount-card">
         <div class="discount-header">
+            <h3 class="discount-title">FOSST</h3>
             <div class="discount-logo-container">
                 <img src="/images/logos/fosst-logo.png" alt="FOSST Logo" class="discount-logo">
         </div>
