registration link change

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -31,12 +31,12 @@ import '../styles/Components/header.css';
                 </li>
                 <!-- Desktop Join Button (hidden on mobile) -->
                 <li class="desktop-join-link">
-                    <a href="/register" class="nav-link desktop-join-button">Join</a>
+                    <a href="/registration" class="nav-link desktop-join-button">Join</a>
                 </li>
             </ul>
             <!-- Mobile Join Button (visible on mobile) -->
             <div class="mobile-join-link">
-                <a href="/register" class="mobile-join-button">Become Member!</a>
+                <a href="/registration" class="mobile-join-button">Become Member!</a>
             </div>
         </nav>
         <button 
