--- a/src/pages/become-a-member.astro
+++ b/src/pages/become-a-member.astro
@@ -29,7 +29,7 @@ import '../styles/pages/membership.css';
                 <p>Become part of the largest student strength sports association in the Benelux. Whether you're a beginner or experienced lifter, Spartacus provides everything you need to excel in powerlifting, bodybuilding, and strength training.</p>
                 <div class="hero-buttons">
                     <a href="#benefits" class="btn">SEE MEMBERSHIP BENEFITS</a>
-                    <a href="/register" class="btn btn-secondary">JOIN NOW</a>
+                    <a href="/registration" class="btn btn-secondary">JOIN NOW</a>
                 </div>
             </div>
         </div>
@@ -56,7 +56,7 @@ import '../styles/pages/membership.css';
                 
                 <div class="text-center">
                     <p class="mb-40"><strong>Note:</strong> To join Spartacus, you must also have a valid <a href="https://www.tilburguniversity.edu/campus/sports-center/sportsmembership" target="_blank" class="spartacus-link">Tilburg University Sports Center membership</a>.</p>
-                    <a href="/register" class="btn btn-large">BECOME A MEMBER TODAY!</a>
+                    <a href="/registration" class="btn btn-large">BECOME A MEMBER TODAY!</a>
                 </div>
             </section>
 
