--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -109,7 +109,7 @@ import '../styles/pages/index.css';
                 <li>Regular social events</li>
             </ul>
             <div class="price-action">
-                <a href="/register" class="btn">Register Now</a>
+                <a href="/registration" class="btn">Register Now</a>
             </div>
         </div>
         
@@ -146,7 +146,7 @@ import '../styles/pages/index.css';
                     <li>Regular social events</li>
                 </ul>
                 <div class="price-action">
-                    <a href="/register" class="btn">Register Now</a>
+                    <a href="/registration" class="btn">registration Now</a>
                 </div>
             </div>
             
