--- a/src/components/DiscountPartners.astro
+++ b/src/components/DiscountPartners.astro
@@ -93,6 +93,7 @@
         </div>
         <div class="discount-body">
             <h3 class="discount-title">SPORT CENTER</h3>
+            <p class="discount-description">All of our trainings happen in sport center</p>
 
             <div class="discount-button-container">
                 <a href="https://www.tilburguniversity.edu/nl/campus/sports-center" class="btn btn-secondary discount-btn" target="_blank">
@@ -105,11 +106,12 @@
     <!-- FOSST Entry -->
     <div class="discount-card">
         <div class="discount-header">
-            <h3 class="discount-title">FOSST</h3>
             <div class="discount-logo-container">
                 <img src="/images/logos/fosst-logo.png" alt="FOSST Logo" class="discount-logo">
         </div>
-        <div class="discount-body">        
+        <div class="discount-body">
+            <h3 class="discount-title">FOSST</h3>
+            <p class="discount-description">FOSST is there for everyone in sport center, wether your member of spartacus or not!</p>
             <div class="discount-button-container">
                 <a href="https://fosst.nl" class="btn btn-secondary discount-btn" target="_blank">
                     <i class="fas fa-external-link-alt"></i> VISIT WEBSITE
