--- a/src/components/DiscountPartners.astro
+++ b/src/components/DiscountPartners.astro
@@ -103,6 +103,26 @@
         </div>
     </div>
 
+
+    <!-- FOSST Entry -->
+    <div class="discount-card">
+        <div class="discount-header">
+            <div class="discount-logo-container">
+                <img src="/images/logos/fosst-logo.png" alt="FOSST Logo" class="discount-logo">
+            </div>
+        </div>
+        <div class="discount-body">
+            <h3 class="discount-title">FOSST</h3>
+            <p class="discount-description">FOSST is there for everyone in sport center, wether your member of spartacus or not!</p>
+            <div class="discount-button-container">
+                <a href="https://fosst.nl" class="btn btn-secondary discount-btn" target="_blank">
+                    <i class="fas fa-external-link-alt"></i> VISIT WEBSITE
+                </a>
+            </div>
+        </div>
+    </div>
+
+
     <!-- FOSST Entry -->
     <div class="discount-card">
         <div class="discount-header">
