--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -74,6 +74,7 @@ import '../styles/Components/Footer.css';
             <div class="footer-bottom-links">
                 <a href="/important-documents">Privacy Policy</a>
                 <a href="/important-documents">Terms of Service</a>
+                <a href="/sitemap">Sitemap</a>
             </div>
         </div>
     </div>
