membership dosciunt change

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -36,7 +36,7 @@ import '../styles/Components/Footer.css';
             <div class="footer-column">
                 <h3>Member Resources</h3>
                 <ul class="footer-links">
-                    <li><a href="/DiscountPartners">Member Discounts</a></li>
+                    <li><a href="/partners">Member Discounts</a></li>
                     <li><a href="https://knkf-sectiepowerliften.nl/" target="_blank">KNKF Registration</a></li>
                     <li><a href="https://tskvspartacus.nl/shop/" target="_blank">Official Webshop</a></li>
                     <li><a href="/important-documents">Important Documents</a></li>
