--- a/src/pages/sitemap.astro
+++ b/src/pages/sitemap.astro
@@ -103,7 +103,7 @@ import '../styles/pages/sitemap.css';
                             <div class="sitemap-description">Access your membership details</div>
                         </li>
                         <li class="sitemap-item">
-                            <a href="/DiscountPartners" class="sitemap-link">Membership Discounts</a>
+                            <a href="/partners" class="sitemap-link">Membership Discounts</a>
                             <div class="sitemap-description">Special offers for Spartacus members</div>
                         </li>
                         <li class="sitemap-item">
