--- a/src/pages/strenghtsports/powerlifting.astro
+++ b/src/pages/strenghtsports/powerlifting.astro
@@ -29,7 +29,7 @@ import '..//../styles/pages/powerlifting.css';
                     <p>Welcome to the powerlifting section of T.S.K.V. Spartacus, where we combine technique, strength, and community to help you reach your full potential in the sport of powerlifting.</p>
                     <div class="hero-buttons">
                         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdSXlvtX-MaUvgCUhzlEINZGP-QWAqJkiscxRrLn7XSVLUbvA/viewform?usp=sf_link" target="_blank" class="btn">APPLY FOR COACHING</a>
-                        <a href="/../index#calendar" class="btn btn-secondary">VIEW TRAINING SCHEDULE</a>
+                        <a href="/../#calendar" class="btn btn-secondary">VIEW TRAINING SCHEDULE</a>
                     </div>
                 </div>
             </div>
