--- a/src/pages/member-portal.astro
+++ b/src/pages/member-portal.astro
@@ -216,6 +216,7 @@ import Footer from '../components/Footer.astro';
                 <!-- Conscribo Portal Widget -->
                 <script async src="https://leden.conscribo.nl/TSKVSpartacus/portal/loader" type="module"></script>
                 <div class="conscribo-app-container" data-id="af04808317"></div>
+                <div class="conscribo-app-container" data-id="a071d903b8"></div>
             </div>
             
             <!-- Help Section -->
